# exempi-rs

./: .gitmodules  Cargo.toml
exempi-sys/: Cargo.toml  build.rs
src/: lib.rs
