[package]
name = "exempi-sys"
version = "2.5.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
license = "BSD-2-Clause"
build = "build.rs"
description = "Unsafe Rust bindings to Exempi 2.4. Part of exempi-rs."
keywords = ["xmp", "metadata"]
repository = "https://github.com/hfiguiere/exempi-rs"
homepage = "https://libopenraw.freedesktop.org/exempi/"

[features]
# static = ["expat-sys", "libz-sys", "autotools", "link-cplusplus"]
static = ["autotools"]

[dependencies]
libc = "0.2"
# expat-sys = { version = "2.1",  optional = true }
# libz-sys = { version = "1.1", optional = true, default-features = false, features = ["libc"] }
# link-cplusplus = { version = "1.0", optional = true }

[build-dependencies]
pkg-config = "0.3"
autotools = { version = "0.2.1", optional = true }
